// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.formatExecError() 1`] = `
"  ● Test suite failed to run

    Whoops!
"
`;

exports[`formatStackTrace should strip node internals 1`] = `
"  ● Unix test

      
        Expected value to be of type:
          \\"number\\"
        Received:
          \\"\\"
        type:
          \\"string\\"

      at Object.it (__tests__/test.js:8:14)
      at internal/process/next_tick.js:188:7
"
`;

exports[`retains message in babel code frame error 1`] = `
"  ● Babel test

      
        packages/react/src/forwardRef.js: Unexpected token, expected , (20:10)

          </> <gray> 18 | </>        <cyan>false</><yellow>,</>
           <gray> 19 | </>        <green>'forwardRef requires a render function but received a \`memo\` '</> 
          <red><bold>></></><gray> 20 | </>          <green>'component. Instead of forwardRef(memo(...)), use '</> <yellow>+</>
           <gray>    | </>          <red><bold>^</></>
           <gray> 21 | </>          <green>'memo(forwardRef(...)).'</><yellow>,</>
           <gray> 22 | </>      )<yellow>;</>
           <gray> 23 | </>    } <cyan>else</> <cyan>if</> (<cyan>typeof</> render <yellow>!==</> <green>'function'</>) {</>
"
`;

exports[`should exclude jasmine from stack trace for Unix paths. 1`] = `
"  ● Unix test

      at stack (../jest-jasmine2/build/jasmine-2.4.1.js:1580:17)

      at Object.addResult (../jest-jasmine2/build/jasmine-2.4.1.js:1550:14)
      at Object.it (build/__tests__/messages-test.js:45:41)
"
`;

exports[`should not exclude vendor from stack trace 1`] = `
"  ● Vendor test

      
        Expected value to be of type:
          \\"number\\"
        Received:
          \\"\\"
        type:
          \\"string\\"

      at Object.it (__tests__/vendor/cool_test.js:6:666)
      at Object.asyncFn (__tests__/vendor/sulu/node_modules/sulu-content-bundle/best_component.js:1:5)
"
`;
